added scoring endpoint to jupyter notebook

--- a/life_expectancy.ipynb
+++ b/life_expectancy.ipynb
@@ -1628,6 +1628,53 @@
    "source": [
     "v1.LRScatterGraph(y_test, pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install watson-machine-learning-client\n",
+    "\n",
+    "from watson_machine_learning_client import WatsonMachineLearningAPIClient\n",
+    "\n",
+    "wml_credentials={\n",
+    "    \"apikey\": \"your_apikey\",\n",
+    "    \"instance_id\": \"your_instance_id\",\n",
+    "    \"url\": \"your_url\"\n",
+    "}\n",
+    "\n",
+    "client = WatsonMachineLearningAPIClient(wml_credentials)\n",
+    "\n",
+    "\n",
+    "model_props = {client.repository.ModelMetaNames.AUTHOR_NAME: \"Utkarsh Bhardwaj\", \n",
+    "               client.repository.ModelMetaNames.AUTHOR_EMAIL: \"utkarsh_bt2k18@dtu.ac.in\", \n",
+    "               client.repository.ModelMetaNames.NAME: \"LifeExpectancy\"}\n",
+    "\n",
+    "\n",
+    "model_artifact =client.repository.store_model(reg, meta_props=model_props)\n",
+    "\n",
+    "\n",
+    "\n",
+    "published_model_uid = client.repository.get_model_uid(model_artifact)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(published_model_uid)\n",
+    "\n",
+    "\n",
+    "\n",
+    "deployment = client.deployments.create(published_model_uid, name=\"LifeExpectancy\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "scoring_endpoint = client.deployments.get_scoring_url(deployment)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(scoring_endpoint)"
+   ]
   }
  ],
  "metadata": {
